need to enter fam name and fix spacing

--- a/moneyApp.css
+++ b/moneyApp.css
@@ -316,6 +316,12 @@ body {
 }
 
 /* account creation starts here*/
+
+#familySetup {
+    margin-top: 200px;
+}
+
+
 #signupDoneButton {
     width: 60%;
     left: 17%;
@@ -365,6 +371,8 @@ body {
     text-align: center;
     width: 10%;
 }
+
+
 
 /*Alerts on index page*/
 #requestAlerts {
